--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -2483,12 +2483,12 @@ msgid ""
 msgstr ""
 "TITANS freelancers ponúka mnoho zaujímavých pracovných ponúk a projektov "
 "pre IT freelancerov.\n"
-"                      SPoupracujeme s tisíckami IT freelancerov na "
+"                      Spolupracujeme s tisíckami IT freelancerov na "
 "Slovensku a v zahraničí. Podpísali sme partnerstvá\n"
 "                      s prestížnymi firmami, inštitúciami a agentúrami v "
 "Rakúsku, Švajčiarsku, Chorvátsku, Česku,\n"
 "                      a na Slovensku, čo nám umožňuje ponúkať "
-"ITfreelancerom množstvo zaujímavých projektov.\n"
+"IT freelancerom množstvo zaujímavých projektov.\n"
 "                      Pre ponuku jobov pozri www.titans.sk."
 
 #: templates/sponsoring.html:72
