--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-01-21 23:30+0100\n"
+"POT-Creation-Date: 2019-01-24 22:14+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -863,7 +863,8 @@ msgid ""
 "budúcich generácii."
 msgstr ""
 
-#: templates/edusummit.html:80 templates/speakers.html:164
+#: templates/edusummit.html:80 templates/index.html:359
+#: templates/speakers.html:164
 msgid "CS student and Python enthusiast"
 msgstr "žiak informatiky a Python nadšenec"
 
@@ -887,8 +888,6 @@ msgid ""
 "Controling a robotic arm with micro:bits. How to make computer science "
 "education more interesting."
 msgstr ""
-"Ovládanie robotického ramena micro:bitmi. Ako urobiť hodiny programovania"
-" zaujímavejšími."
 
 #: templates/edusummit.html:94 templates/speakers.html:178
 msgid ""
@@ -897,9 +896,6 @@ msgid ""
 "used to engage a young audience with interactive demos and programming "
 "activities."
 msgstr ""
-"Je všeobecne známe, že získať pozornosť detí na dlhšiu dobu je veľmi "
-"ťažké. Spolu preskúmame, ako môžeme s micro:bitom zaujať mladé publikum "
-"pomocou interaktívnych dem a programátorských aktivít."
 
 #: templates/edusummit.html:95 templates/speakers.html:179
 msgid ""
@@ -914,15 +910,6 @@ msgid ""
 "bones / boilerplate source file and can write code to control the arm "
 "with less guidance."
 msgstr ""
-"Deti zbožňujú fyzickú interakciu s hardvérom. Presne to je skvelé na "
-"micro:bite. Nielenže má vstavané LEDky a tlačidlá, ale dokáže ovládať "
-"väčšie a vzrušujúcejšie zariadenia ako napríklad robotické ramená. To "
-"umožňuje pripraviť výzvu pre študentov na rôznych úrovniach. Študentom, "
-"ktorý sú v programovaní začiatočníci, môžeme zadať pokročilý program, "
-"alebo návod krok za krokom, ktorý ich prevedie celým procesom ovládania "
-"zariadenia (v tomto prípade robotického ramena). Pokročilejší študenti "
-"môžu dostať menej komplexný zdrojový súbor a môžu písať kód na ovládanie "
-"ramena samostatnejšie."
 
 #: templates/edusummit.html:109
 msgid "Why Attend?"
@@ -1704,9 +1691,21 @@ msgstr "senior softvér vývojárka v Google AI Genomics"
 msgid "Python engineer at Elastic"
 msgstr "Python vývojár v Elastic"
 
-#: templates/index.html:347 templates/speakers.html:132
+#: templates/index.html:349 templates/speakers.html:132
 msgid "Back-end and infrastructure engineer at Crate.io, Django core contributor"
-msgstr ""
+msgstr "Technik backendu a infraštruktúry v Crate.io, Django core prispievateľ"
+
+#: templates/index.html:369 templates/speakers.html:197
+msgid "Python engineer at Iceye"
+msgstr "Python vývojár v Iceye"
+
+#: templates/index.html:382 templates/speakers.html:231
+msgid "Creator of Anvil"
+msgstr "Tvorca Anvilu"
+
+#: templates/index.html:392 templates/speakers.html:269
+msgid "Python developer at Anvil"
+msgstr "Python vývojár v Anvile"
 
 #: templates/job-fair.html:8
 msgid "Job fair"
@@ -2377,7 +2376,7 @@ msgstr ""
 
 #: templates/speakers.html:76
 msgid "Nucleus: an open-source library for genomics data and machine learning"
-msgstr "Nucleus: open-sourcová knižnica na genetické dáta a strojové učenie"
+msgstr ""
 
 #: templates/speakers.html:78
 msgid ""
@@ -2389,14 +2388,6 @@ msgid ""
 "caller, and in other ML projects at Google AI Genomics. This talk will "
 "give an overview of Nucleus, its features, and its APIs."
 msgstr ""
-"Nucleus je pythonská knižnica navrhnutá na jednoduché čítanie, "
-"zapisovanie a analýzu genetických údajov v bežnom bioinformatickom "
-"formáte ako sú SAM a VCF. Navyše, Nucleus umožňuje bezproblémovú "
-"integráciu s frameworkom na strojové učenie TensorFlow. Nucleus sa "
-"intenzívne využíva v projekte DeepVariant, čo je variant caller postavený"
-" na najmodernejšej konvolučnej neurónovej sieti, ale aj v ďalších "
-"projektoch využívajúcich strojové učenie v Google AI Genomics. Táto "
-"prednáška stručne predstaví Nucleus, jeho funkcionalitu a jeho API."
 
 #: templates/speakers.html:141
 msgid ""
@@ -2420,10 +2411,6 @@ msgid ""
 "trying to find out how to do things."
 msgstr ""
 
-#: templates/speakers.html:197
-msgid "Python engineer at Iceye"
-msgstr "Python vývojár v Iceye"
-
 #: templates/speakers.html:206
 msgid ""
 "After several years of using Python in e-commerce, banking, and media "
@@ -2443,13 +2430,80 @@ msgstr ""
 
 #: templates/speakers.html:210
 msgid "Using python in new space industry is not a rocket science"
-msgstr "Využívanie Pythonu vo vesmírnom priemysle nie je raketová veda"
+msgstr ""
 
 #: templates/speakers.html:212
 msgid ""
 "What we do at Iceye and how python is allowing us to grow fast and be "
 "unique."
-msgstr "Čo robíme v Iceye a ako nám Python pomáha rýchlo rásť a byť výnimočnými."
+msgstr ""
+
+#: templates/speakers.html:240
+msgid ""
+"Meredydd has been programming since the halcyon days of QBasic and "
+"Delphi, when it was easy to get started building software. He created "
+"Anvil to bring those days back. Meredydd has worked in startups from "
+"telecomms to music, and has a PhD in the usability of programming from "
+"Cambridge."
+msgstr ""
+"Meredydd programoval od starých dobrých čias QBasicu a Delphi, keď bolo "
+"ešte jednoduché začať tvoriť softvér. Vytvoril Anvil, aby sa tieto časy "
+"vrátili. Meredydd pracoval v startupoch od telkomu po hudbu a má PhD z "
+"Cambridge o využiteľnosti programovania."
+
+#: templates/speakers.html:244
+msgid "Anvil: Full-stack Web Apps with Nothing but Python"
+msgstr ""
+
+#: templates/speakers.html:246
+msgid ""
+"Building for the modern web is complicated and error-prone: a typical web"
+" app requires five different languages and four or five frameworks just "
+"to get started. Wouldnt it be nicer if we could do it all in Python? With"
+" Anvil, you can design your page visually, write your browser-side and "
+"server-side code in pure Python, and even set up a built-in database in "
+"seconds. In this talk, Meredydd will walk us through how Anvil works "
+"under the bonnet, and the challenges of building a programming system "
+"thats easy to use without sacrificing power."
+msgstr ""
+
+#: templates/speakers.html:278
+msgid ""
+"Shaun started programming in earnest by simulating burning fusion plasmas"
+" in the worlds biggest laser system. He fell in love with Python as a "
+"data analysis tool, and has never looked back. Now he wants to turn "
+"everything into Python, which is why he works for Anvil."
+msgstr ""
+"Shaun začal programovať simulovaním horiacej fúznej plazmy v najväčšom"
+" laserovom systéme na svete. Zahľadel sa do Pythonu ako nástroja na analýzu"
+" dát a odvtedy už nepozeral po žiadnom inom. Teraz chce všetko zmeniť na "
+"Python, preto pracuje v Anvile."
+
+#: templates/speakers.html:284
+msgid "Anvil - Build a full-stack web app using nothing but Python"
+msgstr ""
+
+#: templates/speakers.html:286
+msgid ""
+"Anvil is a platform for rapidly developing web apps using nothing but "
+"Python.\n"
+"\n"
+"Its like Visual Basic for the web. It has a drag-and-drop editor for "
+"constructing a user interface, controlled by Python code in both the "
+"client and a hosted server environment.\n"
+"\n"
+"This is an interactive workshop where youll be guided through creating an"
+" app. Either:\n"
+"* A TODO list - a simple example of a Create, Read, Update, Delete (CRUD)"
+" app\n"
+"* A weather data dashboard\n"
+"* An app that controls a remote machine from the web\n"
+"* Any other idea you might have!\n"
+"\n"
+"Youll need a laptop to follow along.\n"
+"\n"
+"For a preview, have a look at this short video https://anvil.works/#about"
+msgstr ""
 
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
 msgid "Sponsors &amp; Partners"
