Added social links for anvil

--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-01-26 10:28+0100\n"
+"POT-Creation-Date: 2019-01-29 21:10+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -2520,10 +2520,10 @@ msgid ""
 "devoted Python user and evangelist. Interested in operating systems, "
 "security, networking and almost anything interesting."
 msgstr ""
-"Adam je momentálne bezpečnostný inžinier, ale ako SRE/bezpečnostný"
-"/DevOps inžinier pracuje už dlhý čas. Miluje UNIX, je oddaným používateľom "
-"a evanjelistom Pythonu. Zaujíma sa o operačné systémy, bezpečnosť, siete "
-"a vlastne čokoľvek zaujímavé."
+"Adam je momentálne bezpečnostný inžinier, ale ako SRE/bezpečnostný/DevOps"
+" inžinier pracuje už dlhý čas. Miluje UNIX, je oddaným používateľom a "
+"evanjelistom Pythonu. Zaujíma sa o operačné systémy, bezpečnosť, siete a "
+"vlastne čokoľvek zaujímavé."
 
 #: templates/speakers.html:334
 msgid "Be a good colleague and help your Security Engineer!"
